set(_FILES
  derivedFvPatchFields/semiPermeableBaffle/semiPermeableBaffleMassFraction/semiPermeableBaffleMassFractionFvPatchScalarField.C
  derivedFvPatchFields/semiPermeableBaffle/semiPermeableBaffleVelocity/semiPermeableBaffleVelocityFvPatchVectorField.C
  derivedFvPatchFields/humidityTemperatureCoupledMixed/humidityTemperatureCoupledMixedFvPatchScalarField.C
  derivedFvPatchFields/thermalBaffle1D/thermalBaffle1DFvPatchScalarFields.C
  derivedFvPatchFields/totalFlowRateAdvectiveDiffusive/totalFlowRateAdvectiveDiffusiveFvPatchScalarField.C
  derivedFvPatchFields/externalWallHeatFluxTemperature/externalWallHeatFluxTemperatureFvPatchScalarField.C
  derivedFvPatchFields/wallHeatTransfer/wallHeatTransferFvPatchScalarField.C
  derivedFvPatchFields/convectiveHeatTransfer/convectiveHeatTransferFvPatchScalarField.C
  derivedFvPatchFields/fixedIncidentRadiation/fixedIncidentRadiationFvPatchScalarField.C
  derivedFvPatchFields/outletMappedUniformInletHeatAddition/outletMappedUniformInletHeatAdditionFvPatchField.C
  derivedFvPatchFields/outletMachNumberPressure/outletMachNumberPressureFvPatchScalarField.C
  derivedFvPatchFields/temperatureCoupledBase/temperatureCoupledBase.C
  derivedFvPatchFields/turbulentTemperatureCoupledBaffleMixed/turbulentTemperatureCoupledBaffleMixedFvPatchScalarField.C
  derivedFvPatchFields/turbulentTemperatureRadCoupledMixed/turbulentTemperatureRadCoupledMixedFvPatchScalarField.C
  derivedFvPatchFields/lumpedMassWallTemperature/lumpedMassWallTemperatureFvPatchScalarField.C
  derivedFvPatchFields/wallFunctions/alphatWallFunctions/alphatWallFunction/alphatWallFunctionFvPatchScalarField.C
  derivedFvPatchFields/wallFunctions/alphatWallFunctions/alphatJayatillekeWallFunction/alphatJayatillekeWallFunctionFvPatchScalarField.C
  derivedFvPatchFields/wallFunctions/sorptionWallFunction/sorptionWallFunctionFvPatchScalarField.C
)
add_library(thermoTools ${_FILES})
target_compile_features(thermoTools PUBLIC cxx_std_11)
target_include_directories(thermoTools PUBLIC include includePrivate derivedFvPatchFields/thermalBaffle1D)
target_link_libraries(thermoTools
  PUBLIC
    compressibleTransportModels
    finiteVolume
    solidThermo
    turbulenceModels
    compressibleTurbulenceModels
    reactionThermophysicalModels
    incompressibleMultiphaseSystems
    radiationModels
)
